# Rocket-Web-App

./: .gitignore  Cargo.toml  README.md  main.rs
src/: base.html.hbs  gulpfile.js  gulpfile.ts  package-lock.json  package.json  style.css  tailwind.config.cjs
src/components/: card.html.hbs  head.html.hbs  nav.html.hbs
src/components/icons/: academic-cap.html.hbs  adjustments.html.hbs  beaker.html.hbs  bookmark.html.hbs  logo.html.hbs  question-mark-circle.html.hbs
src/pages/: 404.html.hbs  home.html.hbs
src/typescript/: index.ts  tsconfig.json
